# yt-membership-parser

./: .dockerignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  codeql.yml  dependency-review.yaml
src/yt_membership_parser/: api.py  image_processing.py  locales.py  ocr.py  text_parsing.py
tests/: conftest.py
tests/integration/: api_test.py  conftest.py
tests/unit/: __init__.py  locales_test.py  sample_test.py
